chore: create sidebar bug: sidebar overlaps navbar

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,9 @@
 .sidebar {
   background-color: red;
+  position: fixed;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .sidebar p,
